--- a/chisiamo.html
+++ b/chisiamo.html
@@ -96,9 +96,8 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">
-            Image è un piu di un centro di bellezza. In base alle esigenze e al tempo disponibile dei nostri clienti, proponiamo un percorso di bellezza personalizzato, puntando sulla qualità dei trattamenti e dei prodotti e le novità nel campo dell’estetica.
-            </p>
+          <p class="lead text-center">Image è un piu di un centro di bellezza. In base alle esigenze e al tempo disponibile dei nostri clienti, proponiamo un percorso di bellezza personalizzato, puntando sulla qualità dei trattamenti e dei prodotti e le novità nel campo dell’estetica.
+          </p>
           <img src="images/chi_siamo.jpeg" class="center-block img-responsive" style="width:100%">
         </header>
         <div class="divider">
@@ -108,13 +107,19 @@
           <div class="col-md-offset-4 col-md-4">
             <div class="thumbnail">
               <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
+              <img class="img-responsive" src="images/Paola.jpg" alt="team">
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
                                     <!-- name + occupation -->Paola Braga
-                                    <small class="block fsize13">Con trent’anni di esperienza nel campo dell’estetica, Paola ha assicurato il successo della sua attività mantenendosi sempre aggiornata sulle tecniche e i trattamenti di ultima generazione. Apre la sua attività nel 1994 e continua a frequentare corsi di specializzazione su varie tecniche di massaggio, nuove tecnologie per l’estetica e nuovi prodotti, per poter offrire ai propri clienti sempre il meglio. È tra le prime a specializzarsi in Omoenergetica®, imparata da una famosissima docente argentina, e apprende tecniche pre e post operatorie della medicina estetica .
-</small>
+                                    <small class="block fsize13">Con trent’anni di esperienza nel campo dell’estetica, Paola ha assicurato
+                                        il successo della sua attività mantenendosi sempre aggiornata sulle tecniche
+                                        e i trattamenti di ultima generazione. Apre la sua attività nel 1994 e
+                                        continua a frequentare corsi di specializzazione su varie tecniche di massaggio,
+                                        nuove tecnologie per l’estetica e nuovi prodotti, per poter offrire ai
+                                        propri clienti sempre il meglio. È tra le prime a specializzarsi in Omoenergetica®,
+                                        imparata da una famosissima docente argentina, e apprende tecniche pre
+                                        e post operatorie della medicina estetica .</small>
                                 </h4>
               </div>
               <!-- /caption -->
@@ -125,13 +130,16 @@
           <div class="col-md-offset-4 col-md-4">
             <div class="thumbnail">
               <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
+              <img class="img-responsive" src="images/Marina.jpg" alt="team">
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
                                     <!-- name + occupation -->Marina
-                                    <small class="block fsize13">Diplomata estetista e con alle spalle una solida formazione nel campo della bellezza grazie ai molti corsi e seminari di specializzazione a cui ha preso parte, sa coniugare con maestria l’attenzione nell’utilizzo delle tecniche con una profonda conoscenza dei prodotti di ultima generazione. Collabora stabilmente con Image da oltre 15 anni.
-</small>
+                                    <small class="block fsize13">Diplomata estetista e con alle spalle una solida formazione nel campo
+                                        della bellezza grazie ai molti corsi e seminari di specializzazione a cui
+                                        ha preso parte, sa coniugare con maestria l’attenzione nell’utilizzo delle
+                                        tecniche con una profonda conoscenza dei prodotti di ultima generazione.
+                                        Collabora stabilmente con Image da oltre 15 anni.</small>
                                 </h4>
               </div>
               <!-- /caption -->
@@ -147,7 +155,11 @@
               <div class="caption text-center">
                 <h4>
                                     <!-- name + occupation -->Silvia
-                                    <small class="block fsize13">Inizia a lavorare presso il Centro Image a soli 19 anni, subito dopo aver concluso la sua formazione professionale in estetica. Negli anni ha seguito molti corsi di perfezionamento nelle varie discipline della bellezza (dal massaggio alla depilazione con tecniche di ultima generazione), diventando -a dispetto della giovane età- una professionista di altissimo profilo.</small>
+                                    <small class="block fsize13">Inizia a lavorare presso il Centro Image a soli 19 anni, subito dopo aver
+                                        concluso la sua formazione professionale in estetica. Negli anni ha seguito
+                                        molti corsi di perfezionamento nelle varie discipline della bellezza (dal
+                                        massaggio alla depilazione con tecniche di ultima generazione), diventando
+                                        -a dispetto della giovane età- una professionista di altissimo profilo.</small>
                                 </h4>
               </div>
               <!-- /caption -->
@@ -163,7 +175,9 @@
           <h1>
                         <!-- iPhones, Androids and other mobile devices will recognize the phone
                         number -->
-                        <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
+  	                      <a class="phonelink" href="tel:003902-9382322">02-9382322</a>
+            							<br>
+
                         <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
                     </h1>
         </div>
