--- a/chisiamo.html
+++ b/chisiamo.html
@@ -150,7 +150,7 @@
           <div class="col-md-offset-4 col-md-4">
             <div class="thumbnail">
               <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
+              <img class="img-responsive" src="images/Silvia.jpg" alt="team">
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
