--- a/solari.html
+++ b/solari.html
@@ -110,8 +110,19 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">LASER</h3>
-                <p class="lead text-left">
-                </p>
+                <p class="lead text-left">È un’apparecchiatura estetica professionale di nuova generazione per eliminare progressivamente i peli superflui senza danneggiare la pelle.
+                  <br>L'impulso laser viene assorbito in grande quantità dalla melanina, e convertita in calore, aumentando così la temperatura del follicolo pilifero.
+                  <br>La temperatura aumenta danneggiando irreversibilmente la struttura del target, inevitabilmente si agisce sui processi fisiologici naturali e quindi si raggiunge lo scopo della depilazione.
+                  <br>
+                  <br>Adatto a qualsiasi tipo di pelle
+
+                  <br>Sicuro e veloce
+
+                  <br>Nessun danno
+                  <br>Raffreddamento della pelle immediato, sicuro e confortevole Produzione italiana
+                  <br>L’interazione tra il laser e il bulbo pilifero è essenzialmente termica. L'obiettivo del trattamento è rimuovere i peli indesiderati senza effetti collaterali. Il processo, noto come “fototermolisi selettiva”, assicura un danno effettivo
+                  del target e la simultanea protezione della pelle circostante. L'applicazione del laser ha dimostrato di poter ritardare in modo esteso la crescita di peli negli uomini e nelle donne. Per un risultato soddisfacente sono di media necessarie
+                  dieci sessioni di trattamento. Il numero di sessioni necessarie è maggiore per le persone con crescita di peli molto forte, e per alcune zone tipo il mento.</p>
               </div>
             </div>
           </div>
@@ -128,21 +139,10 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">TRATTAMENTO MACCHIE CUTANEE</h3>
-                <p class="lead text-left">È un’apparecchiatura estetica professionale di nuova generazione per eliminare progressivamente i peli superflui senza danneggiare la pelle.
-<br>
-L'impulso laser viene assorbito in grande quantità dalla melanina, e convertita in calore, aumentando così la temperatura del follicolo pilifero.
-<br>
-La temperatura aumenta danneggiando irreversibilmente la struttura del target, inevitabilmente si agisce sui processi fisiologici naturali e quindi si raggiunge lo scopo della depilazione.
-<br>
-<br>Adatto a qualsiasi tipo di pelle 
-<br>Sicuro e veloce 
-<br>Nessun danno
-<br>Raffreddamento della pelle immediato, sicuro e confortevole
-Produzione italiana<br>
-L’interazione tra il laser e il bulbo pilifero è essenzialmente termica. L'obiettivo del trattamento è rimuovere i peli indesiderati senza effetti collaterali.
-Il processo, noto come “fototermolisi selettiva”, assicura un danno effettivo del target e la simultanea protezione della pelle circostante.
-L'applicazione del laser ha dimostrato di poter ritardare in modo esteso la crescita di peli negli uomini e nelle donne. 
-Per un risultato soddisfacente sono di media necessarie dieci sessioni di trattamento. Il numero di sessioni necessarie è maggiore per le persone con crescita di peli molto forte, e per alcune zone tipo il mento.</p>
+                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
+                  risultati di bellezza e protezione ottimali.</p>
+                
               </div>
             </div>
           </div>
@@ -188,8 +188,6 @@ Per un risultato soddisfacente sono di media necessarie dieci sessioni di tratta
 			ga('send', 'pageview');
 		</script>
 		-->
-
-
 
 
 
