--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
                             <br>20017 Italia
                             <br>
                         </li>
-                        <li class="address-sprite phone">Telefono: 02-9382322</li>
+                      <li class="address-sprite phone">Telefono: 02 9382322 <br>Mobile: 331 44 83 711</li>
                         <li class="address-sprite email">
                             <a href="mailto:paola.braga27@gmail.com">paola.braga27@gmail.com</a>
                         </li>
