--- a/chisiamo.html
+++ b/chisiamo.html
@@ -175,9 +175,8 @@
           <h1>
                         <!-- iPhones, Androids and other mobile devices will recognize the phone
                         number -->
-  	                      <a class="phonelink" href="tel:003902-9382322">02-9382322</a>
-            							<br>
-
+                        <a class="phonelink" href="tel:0039029382322">02-9382322</a>
+                        <br>
                         <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
                     </h1>
         </div>
