--- a/trattamenti.html
+++ b/trattamenti.html
@@ -1,4 +1,8 @@
-<html><head></head><body>
+<html>
+
+<head></head>
+
+<body>
   <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
     <style>
       .fluid-width-video-wrapper {
@@ -98,8 +102,6 @@
             <br>La bellezza è prima di tutto l’espressione di uno stato di grazia. Da questa realtà nasce il mio approccio all’estetica, che ha lo scopo di riequilibrare, valorizzare e rafforzare l’enorme potenziale di bellezza che è già presente nel nostro
             corpo.&nbsp;
             <br>In Omeoenergetica® e Esthederm ho trovato tutti gli&nbsp;strumenti per stimolare e allenare il corpo a produrre bellezza, facendo emergere le energie che abbiamo dentro con trattamenti efficaci che danno risultati immediati e duraturi.
-
-
             <br>
             <br>Paola Braga</p>
         </header>
@@ -127,21 +129,70 @@
     <div class="container">
       <div class="row menu">
         <!-- item -->
+
+
         <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
           <h2 class="text-center">TRATTAMENTI VISO A 360°
-                        <br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare la soluzione migliore per ogni tipo di inestetismi ad ogni fascia di età. Con trattamenti mirati che prevedono azioni specifiche presso il centro e un percorso di bellezza da seguire direttamente da casa, i risultati saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra carta vincente.
-</h2>
+                        <br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare
+                        la soluzione migliore per ogni tipo di inestetismi ad ogni fascia di età.
+                        Con trattamenti mirati che prevedono azioni specifiche presso il centro
+                        e un percorso di bellezza da seguire direttamente da casa, i risultati
+                        saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi
+                        utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra
+                        carta vincente.</h2>
           <!-- name -->
           <!-- short desc -->
         </div>
+
+
+
         <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+
+          <h2> <i class="fa fa-dot-circle-o"></i>
+           Active Rapair: tutta la forza della riparazione attiva per una pelle riparata, affinata e 
+luminosa 
+          </h2>
+          <p>
+            <em>Un efficacia anti-rughe durevole e profonda, la pelle è riparata e ristrutturata. Effetto luminosità immediata. La quantità di luce riflessa è ideale e i segni della stanchezza si attenuano.</em>
+          </p>
+
+        </div>
+
+        <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+
+          <h2> <i class="fa fa-dot-circle-o"></i>Lift &amp; Repair: liftare in superficie, riparare in profondità
+          </h2>
+          <p>
+            <em>
+La pelle è ritesa, i volumi sono accresciuti, l'ovale è ridefinito, lo sguardo si apre. Le rughe si lisciano e la pelle ritrova la sua tonicità.</em>
+          </p>
+
+        </div>
+
+        <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+
+
+          <h2> <i class="fa fa-dot-circle-o"></i>Cyclo System: ripristinare il funzionamento di una pelle giovane
+           </h2>
+          <p>
+            <em>La pelle è rimpolpata, ridensificata, più resistente e ritesa. Rughe e rughette sono attenuate e col tempo i meccanismi di una pelle giovane sono riattivati ritrovando la sua vitalità.</em>
+          </p>
+
+        </div>
+
+        <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+
           <h2>
-                        <i class="fa fa-dot-circle-o"></i>Il benessere scritto sul viso: Rejuvenating Anti Aging Method di Omeoenergetica ®.
-</h2>
+                        <i class="fa fa-dot-circle-o"></i>Il benessere scritto sul viso: Rejuvenating Anti Aging Method di Omeoenergetica
+                        ®.</h2>
           <!-- name -->
           <p>
-            <em>La tua pelle racconta la vita che fai, i tuoi orari, cosa mangi e cosa respiri. Per lasciarti alle spalle stress e smog, regala al tuo viso un trattamento viso di Omeoenergetica®: il trattamento che in soli 30 minuti rende la tua pelle più vitale, luminosa ed elastica. In poco tempo tornerà a respirare e a splendere. E tu con lei.                     
-.</em></p>
+            <em>La tua pelle racconta la vita che fai, i tuoi orari, cosa mangi e cosa
+                            respiri. Per lasciarti alle spalle stress e smog, regala al tuo viso un
+                            trattamento viso di Omeoenergetica®: il trattamento che in soli 30 minuti
+                            rende la tua pelle più vitale, luminosa ed elastica. In poco tempo tornerà
+                            a respirare e a splendere. E tu con lei. .</em>
+          </p>
           <!-- short desc -->
         </div>
         <!-- /item -->
@@ -159,8 +210,13 @@
                         <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
           <!-- name -->
           <p>
-            <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento che permette di aumentare il metabolismo locale dei grassi e perdere centimetri solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta le zone fredde a 37 ° e prodotti specifici permetteranno di recuperare la forma migliore o di prevenire l’insorgenza di accumuli di grasso.
-</em>
+            <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire
+                            sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in
+                            cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento
+                            che permette di aumentare il metabolismo locale dei grassi e perdere centimetri
+                            solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta
+                            le zone fredde a 37 ° e prodotti specifici permetteranno di recuperare
+                            la forma migliore o di prevenire l’insorgenza di accumuli di grasso.</em>
           </p>
           <!-- short desc -->
         </div>
@@ -170,8 +226,11 @@
                         <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
           <!-- name -->
           <p>
-            <em>
-             Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi e tossine, del sistema micro circolatorio e del metabolismo dei grassi per contrastare efficacemente le cause che provocano la cellulite e rendono le gambe “pesanti”. Una vera e propria esperienza di benessere per le tue gambe.</em>
+            <em>Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi
+                            e tossine, del sistema micro circolatorio e del metabolismo dei grassi
+                            per contrastare efficacemente le cause che provocano la cellulite e rendono
+                            le gambe “pesanti”. Una vera e propria esperienza di benessere per le tue
+                            gambe.</em>
           </p>
           <!-- short desc -->
         </div>
@@ -182,7 +241,14 @@
           <!-- name
                     -->
           <p>
-            <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta se ne senta la necessità: dopo un periodo di sedentarietà, in particolari momenti di stress, quando il corpo inizia ad inviare segnali di accumulo di tossine o si manifestano i primi inestetismi legati a un metabolismo rallentato. Il corpo riacquista quell’equilibrio energetico necessario a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una nuova vitalità, uno stato di benessere generale che si protrae nei giorni successivi al trattamento.</em>
+            <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta
+                            se ne senta la necessità: dopo un periodo di sedentarietà, in particolari
+                            momenti di stress, quando il corpo inizia ad inviare segnali di accumulo
+                            di tossine o si manifestano i primi inestetismi legati a un metabolismo
+                            rallentato. Il corpo riacquista quell’equilibrio energetico necessario
+                            a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una
+                            nuova vitalità, uno stato di benessere generale che si protrae nei giorni
+                            successivi al trattamento.</em>
           </p>
           <!-- short desc -->
         </div>
@@ -234,4 +300,8 @@
 
 
 
-</body></html>
+
+
+</body>
+
+</html>
