--- a/chisiamo.html
+++ b/chisiamo.html
@@ -96,7 +96,7 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">Image è un piu di un centro di bellezza. In base alle esigenze e al tempo disponibile dei nostri clienti, proponiamo un percorso di bellezza personalizzato, puntando sulla qualità dei trattamenti e dei prodotti e le novità nel campo dell’estetica.
+          <p class="lead text-center">Image è più di un centro di bellezza. In base alle esigenze e al tempo disponibile dei nostri clienti, proponiamo un percorso di bellezza personalizzato, puntando sulla qualità dei trattamenti e dei prodotti e le novità nel campo dell’estetica.
           </p>
           <img src="images/chi_siamo.jpeg" class="center-block img-responsive" style="width:100%">
         </header>
@@ -138,7 +138,7 @@
                                     <small class="block fsize13">Diplomata estetista e con alle spalle una solida formazione nel campo
                                         della bellezza grazie ai molti corsi e seminari di specializzazione a cui
                                         ha preso parte, sa coniugare con maestria l’attenzione nell’utilizzo delle
-                                        tecniche con una profonda conoscenza dei prodotti di ultima generazione.
+                                        tecniche con una profonda conoscenza dei prodotti utilizzati.
                                         Collabora stabilmente con Image da oltre 15 anni.</small>
                                 </h4>
               </div>
@@ -158,7 +158,7 @@
                                     <small class="block fsize13">Inizia a lavorare presso il Centro Image a soli 19 anni, subito dopo aver
                                         concluso la sua formazione professionale in estetica. Negli anni ha seguito
                                         molti corsi di perfezionamento nelle varie discipline della bellezza (dal
-                                        massaggio alla depilazione con tecniche di ultima generazione), diventando
+                                        massaggio alla depilazione), diventando
                                         -a dispetto della giovane età- una professionista di altissimo profilo.</small>
                                 </h4>
               </div>
