--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
               <input required="" class="form-control fullwidth" type="email" name="email" id="contact_email" value="" placeholder="EMAIL *" title="Email">
             </div>
             <div class="col-md-12">
-              <input class="form-control fullwidth" type="text" name="subject" id="contact_subject" value="" placeholder="SOGGETTO *" title="Subject">
+              <input required="" class="form-control fullwidth" type="text" name="subject" id="contact_subject" value="" placeholder="SOGGETTO *" title="Subject">
             </div>
           </div>
           <div class="row">
