--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
       <div class="col-md-4">
         <h3>Contattaci</h3>
         <!-- CONTACT FORM -->
-        <form id="myForm"  method="post" action="php/contact.php" class="block form-inline">
+        <form id="myForm"  method="post" action="http://www.lacasadiriposo.it/extra_sites/imagedipaola.php" class="block form-inline">
           <div class="row">
             <div class="col-md-12">
               <input required="" class="form-control fullwidth" type="text" name="name" id="contact_name" value="" placeholder="NOME *" title="Name">
