--- a/contact.html
+++ b/contact.html
@@ -203,9 +203,9 @@
               <textarea required="" class="form-control fullwidth" rows="5" name="message" id="contact_comment" placeholder="MESSAGGIO *"></textarea>
             </div>
             <div class="col-md-12">
-              <div id="_sent_ok_" class="alert alert-success fsize14 hisde">
+              <div id="_sent_ok_" class="alert alert-success fsize14 hide">
                 <i class="fa fa-check"></i>
-                <strong>Thank You!</strong>Your message successfully sent!</div>
+                <strong>Grazie! </strong>Il tuo messaggio è stato inviato !</div>
               <input type="hidden" name="captcha" id="captcha" value="">
               <!-- hidden field - humans should not see it, only spam bots will see
                             it -->
@@ -282,7 +282,7 @@ Sabato 9.00-14.00
  $(document).ready(function() { 
             // bind 'myForm' and provide a simple callback function 
             $('#myForm').ajaxForm(function() { 
-                alert("Grazie per averci contattato!"); 
+                $('#_sent_ok_').show();
             }); 
         }); 
 
