--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,10 @@
               <input type="hidden" name="captcha" id="captcha" value="">
               <!-- hidden field - humans should not see it, only spam bots will see
                             it -->
-              <button id="contact_submit" type="submit" class="btn btn-primary">INVIA MESSAGGIO</button>
+              <!-- <button id="contact_submit" type="submit" class="btn btn-primary">INVIA MESSAGGIO</button> -->
+
+
+    <input type="submit" value="Submit Comment" /> 
 
 
             </div>
