--- a/contact.html
+++ b/contact.html
@@ -284,9 +284,16 @@ Sabato 9.00-14.00
 
  $(document).ready(function() { 
             // bind 'myForm' and provide a simple callback function 
-            $('#myForm').ajaxForm(function() { 
-                $('#_sent_ok_').show();
-            }); 
+
+            var options = { 
+                success:    function() { 
+                    $('#_sent_ok_').show();
+                } 
+            }; 
+
+
+            $('#myForm').ajaxForm(options);
+
         }); 
 
 </script>
