--- a/contact.html
+++ b/contact.html
@@ -286,7 +286,7 @@ Sabato 9.00-14.00
             // bind 'myForm' and provide a simple callback function 
 
             var options = { 
-                success:    function() { 
+                beforeSubmit:    function() { 
                     $('#_sent_ok_').show();
                 } 
             }; 
