--- a/contact.html
+++ b/contact.html
@@ -287,6 +287,7 @@ Sabato 9.00-14.00
 
             var options = { 
                 beforeSubmit:    function() { 
+                  alert("dsds");
                     $('#_sent_ok_').show();
                 } 
             }; 
