--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,11 @@
     window["_gaUserPrefs"] = { ioo : function() { return true; } }
 
      var show = function(){
+      alert("shiow");
+      
               $('#_sent_ok_').show();
             }
-            
+
   </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
