--- a/prodotti.html
+++ b/prodotti.html
@@ -140,8 +140,7 @@ Un trattamento estetico che non rimane in superficie ma stimola a fondo i meccan
         <div class="col-md-6 copyright">Image
           <br>2015 All Rights Reserved.</div>
         <div class="col-md-6 text-right">
-          <a href="#" class="social fa fa-facebook"></a>
-          <a href="#" class="social fa fa-twitter"></a>
+          <a href="https://www.facebook.com/profile.php?id=100013581918715"  target="_blank" class="social fa fa-facebook"></a>
         </div>
       </div>
     </div>
