--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@
                         </li>
                       <li class="address-sprite phone">Telefono: <a href="tel:0039029382322">02 9382322</a> <br>Mobile: <a href="tel:00393314483711">331 44 83 711</a></li>
                         <li class="address-sprite email">
-                            <a href="mailto:paola.braga27@gmail.com">paola.braga27@gmail.com</a>
+                            <a href="mailto:imagepaola.arese@gmail.com">imagepaola.arese@gmail.com</a>
                         </li>
                     </ul>
                 </address>
